Fixed Ticket #21: Used word-break:break-all; in the CSS for table td elements.  This allows long strings to be broken and wrapped in Chrome and IE (Firefox does it by default), but it also allows the IP address to be broken and wrapped.  This was the best option available with 100% width tables.

--- a/www/skins/default/style.css
+++ b/www/skins/default/style.css
@@ -562,6 +562,7 @@ dataTables_processing {
 .data_table tbody td {
 	padding: 3px 10px;
 	vertical-align: top;
+	word-break: break-all;
 }
 
 .data_table td.center {
